# RayTracer

./: CMakeLists.txt  README.md  test.txt
src/: main  main.cpp  main2.cpp  rt_camera.cpp  rt_camera.h  rt_color.cpp  rt_color.h  rt_image.cpp  rt_image.h  rt_light.cpp  rt_light.h  rt_ray.cpp  rt_ray.h  rt_scene.cpp  rt_scene.h  rt_sphere.cpp  rt_sphere.h  rt_sphere.h.gch  rt_tools.cpp  rt_tools.h  rt_vector.cpp  rt_vector.h  sphere
